--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bootstrap 101 Template</title>
 
-	<link rel="stylesheet" href="css/style.css">
-
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,7 +18,21 @@
 	<![endif]-->
 </head>
 <body>
-	<h1>Hello, world!</h1>
+	<header>
+		<h1 class="text-center text-uppercase">CSS3 BUTTON GENERATOR</h1>
+	</header>
+	<div class="container">
+		<div class="col-md-6">
+			<h2 class="text-center text-uppercase">options</h2>
+			<h2>Border-radius</h2>
+			<h2>Border-size</h2>
+			<h2>Text</h2>
+		</div>
+		<div class="col-md-6">
+			<h2 class="text-center text-uppercase">result</h2>
+			<button class="btn center-block">Button text</button>
+		</div>
+	</div>
 
 
 
