Maybe it will be complete layout

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="col-xs-12">
 	<form action="URL">
 		<input class="input-email center-block" type="email" placeholder="mail">
-		<input class="center-block" type="button">
+		<input class="input-submit center-block" type="submit" value="Submit">
 	</form>
 </div>
 
