Maybe it will be final layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bootstrap 101 Template</title>
+	<title>CSS3 BUTTON GENERATOR</title>
 
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.css" rel="stylesheet">
@@ -30,7 +30,7 @@
 	<!-- Options -->
 			<div class="col-md-6">
 				<h2 class="text-center text-uppercase">options</h2>
-	
+
 	<!-- Border-radius -->
 				<div class="row">
 					<div class="col-xs-4">
@@ -40,7 +40,7 @@
 						<div id="slider1"></div>
 					</div>
 				</div>
-	
+
 	<!-- Border-size -->
 				<div class="row">
 					<div class="col-xs-4">
@@ -50,7 +50,7 @@
 						<div id="slider2"></div>
 					</div>
 				</div>
-	
+
 	<!-- Text -->
 				<div class="row">
 					<div class="col-xs-4">
@@ -61,8 +61,8 @@
 					</div>
 				</div>
 			</div><!--END Options -->
-	
-	
+
+
 	<!-- Result -->
 			<div class="col-md-6">
 				<h2 class="text-center text-uppercase">result</h2>
@@ -71,24 +71,27 @@
 </div><!--END container-divider -->
 
 <div class="container-code">
+
 	<div class="col-sm-6">
 		<textarea class="textarea pull-right center-block" name="" id="" cols="35" rows="7" placeholder="HTML code" readonly="true"></textarea>
 	</div>
-	
-	
+
+
 	<div class="col-sm-6">
 		<textarea class="textarea pull-left center-block" name="" id="" cols="35" rows="7" placeholder="CSS code" readonly="true"></textarea>
 	</div>
+
 </div><!-- END container-code -->
 
 
+<!-- email + submit block -->
 <div class="col-xs-12">
 	<form action="URL">
 		<input class="input-email center-block" type="email" placeholder="mail">
 		<input class="input-submit center-block" type="submit" value="Submit">
 	</form>
 </div>
-
+<!--END email + submit block -->
 
 
 
