Minor styles changes

--- a/index.html
+++ b/index.html
@@ -66,17 +66,18 @@
 	<!-- Result -->
 			<div class="col-md-6">
 				<h2 class="text-center text-uppercase">result</h2>
-				<button class="btn center-block">Button text</button>
+				<button id="result" class="btn center-block">Button text</button>
 			</div>
 </div><!--END container-divider -->
 
 <div class="container-code">
 
+<!-- HTML code -->
 	<div class="col-sm-6">
 		<textarea class="textarea pull-right center-block" name="" id="" cols="35" rows="7" placeholder="HTML code" readonly="true"></textarea>
 	</div>
 
-
+<!-- CSS code -->
 	<div class="col-sm-6">
 		<textarea class="textarea pull-left center-block" name="" id="" cols="35" rows="7" placeholder="CSS code" readonly="true"></textarea>
 	</div>
@@ -95,14 +96,7 @@
 
 
 
-
 	</div><!--END container wrapper -->
-
-
-
-
-
-
 
 
 
