--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 	<title>CSS3 BUTTON GENERATOR</title>
 
 	<!-- Bootstrap -->
-	<link href="css/bootstrap.css" rel="stylesheet">
+	<!-- <link href="css/bootstrap.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/jquery-ui.css">
 	<link rel="stylesheet" href="css/jquery-ui.structure.css">
 	<link rel="stylesheet" href="css/jquery-ui.theme.css">
-	<link href="css/style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet"> -->
+	<link rel="stylesheet" href="production/all.min.css">
 
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
