add aditional functional to js and change some styles

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<h2 class="text-right">Text</h2>
 					</div>
 					<div class="col-xs-7 col-sm-5 col-xs-ofset-3 col-md-my">
-						<input id="text-form" type="text" placeholder="Button text">
+						<input id="text-form" type="text" placeholder="Button text" maxlength="13">
 					</div>
 				</div>
 			</div><!--END Options -->
@@ -75,12 +75,12 @@
 
 <!-- HTML code -->
 	<div class="col-sm-6">
-		<textarea class="textarea pull-right center-block" name="" id="" cols="35" rows="7" placeholder="HTML code" readonly="true"></textarea>
+		<textarea class="textarea pull-right center-block" name="" id="htmlCode" cols="35" rows="7" placeholder="HTML code" readonly="true"></textarea>
 	</div>
 
 <!-- CSS code -->
 	<div class="col-sm-6">
-		<textarea class="textarea pull-left center-block" name="" id="" cols="35" rows="7" placeholder="CSS code" readonly="true"></textarea>
+		<textarea class="textarea pull-left center-block" name="" id="cssCode" cols="35" rows="7" placeholder="CSS code" readonly="true"></textarea>
 	</div>
 
 </div><!-- END container-code -->
