Main js is ok, add some banner

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 <!-- email + submit block -->
 <div class="col-xs-12">
-	<form action="URL">
-		<input class="input-email center-block" type="email" placeholder="mail">
+	<form action="">
+		<input id="inputEmail" class="input-email center-block" type="email" name="email" placeholder="mail">
 		<input class="input-submit center-block" type="submit" value="Submit">
 	</form>
 </div>
