--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <div class="col-xs-12">
 	<form action="">
 		<input id="inputEmail" class="input-email center-block" type="email" name="email" placeholder="mail">
-		<input class="input-submit center-block" type="submit" value="Submit">
+		<input class="input-submit btn center-block" type="submit" value="Submit">
 	</form>
 </div>
 <!--END email + submit block -->
@@ -103,10 +103,10 @@
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="js/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
