--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
 <!-- HTML code -->
 	<div class="col-sm-6">
-		<textarea class="textarea pull-right center-block" name="" id="htmlCode" cols="35" rows="7" placeholder="HTML code" readonly="true"></textarea>
+		<textarea class="textarea pull-right center-block" name="" id="htmlCode" cols="35" rows="7" placeholder="HTML code" readonly></textarea>
 	</div>
 
 <!-- CSS code -->
 	<div class="col-sm-6">
-		<textarea class="textarea pull-left center-block" name="" id="cssCode" cols="35" rows="7" placeholder="CSS code" readonly="true"></textarea>
+		<textarea class="textarea pull-left center-block" name="" id="cssCode" cols="35" rows="7" placeholder="CSS code" readonly></textarea>
 	</div>
 
 </div><!-- END container-code -->
