add .btn disabled support to grunt

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <!-- CSS code -->
 	<div class="col-sm-6">
-		<textarea class="textarea pull-left center-block" name="" id="cssCode" cols="35" rows="7" placeholder="CSS code" readonly><br></textarea>
+		<textarea class="textarea pull-left center-block" name="" id="cssCode" cols="35" rows="7" placeholder="CSS code" readonly></textarea>
 	</div>
 
 </div><!-- END container-code -->
