fix small git bug

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<![endif]-->
 </head>
 <body>
+	<img src="img/loader.gif" alt="loader" class="loader">
 	<div class="container wrapper">
 		<header>
 			<h1 class="text-center text-uppercase">CSS3 BUTTON GENERATOR</h1>
